# find_work

./: .dockerignore  .env.example  .gitignore  Agent.md  README.md  docker-compose.ssl-ports.yml  docker-compose.yml  main.py  vacancies_20260406_231520.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_saved_search_vacancy_source.py  003_saved_search_max_vacancies.py  004_vacancy_saved_search_id.py  005_vacancy_url_canonical.py
backend/app/: __init__.py  config.py  database.py  deps.py  keyword_taxonomy_v15.py  main.py  models.py  prompts_v15_1.py  serializers.py  settings_service.py
backend/app/prompts/: __init__.py  cover.py  match.py  vacancy_screening_qa.py
backend/app/routers/: health.py  me.py  rest.py  vacancies.py
backend/app/services/: __init__.py  gigachat_client.py  hh_client.py  hh_mapper.py  llm_service.py  matching_job.py  resume_file_parse.py  scheduler.py  sync_service.py  telegram_service.py  vacancy_url.py
backend/app/sources/: __init__.py  base.py  hh_source.py  registry.py  stub_source.py
front/: Dockerfile  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/app/dashboard/: layout.tsx  page.tsx
front/components/: login-page.tsx  safe-markdown.tsx
front/components/dashboard/: analytics-charts.tsx  cover-letter-modal.tsx  header.tsx  recent-vacancies.tsx  sidebar.tsx  (+4 more)
front/lib/: api.ts  types.ts
nginx/: Dockerfile  docker-entrypoint.sh  nginx-ssl.conf.template  nginx.conf.template
scripts/: backup_postgres.sh
(+8 files in other folders)
